@@ -18,6 +18,8 @@ Thanks to Björn "Vampire" Kautler, Matthieu Casanova for contributing to this r
 }}}
 {{{ API Changes
 
+- New methods JEditBuffer.getWordWrap() and JeditBuffer.setWordWrap() (Matthieu Casanova)
+
 - New method DialogChooser.openChooserWindow() showing a chooser dialog (Matthieu Casanova)
 
 - New method DialogChooser.openListChooserWindow() showing a chooser dialog list (Matthieu Casanova)
